--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -67,7 +67,7 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="http://scm.rei.com/rest-api/online-swagger-ui">REI.com REST API</a>
+    <a id="logo" href="/rest-api/online-swagger-ui">REI.com REST API</a>
     <form id='api_selector'>
       <!--div class='input icon-btn'>
         <img id="show-pet-store-icon" src="images/pet_store_api.png" title="Show Swagger Petstore Example Apis">
