--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript">
     $(function () {
       window.swaggerUi = new SwaggerUi({
-      url: "/rest-api/online-swagger-data/service.json",
+      url: "/rest-api/rei.com/service.json",
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
@@ -67,7 +67,7 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="/rest-api/online-swagger-ui">REI.com REST API</a>
+    <a id="logo" href="/rest-api/rei.com">REI.com REST API</a>
     <form id='api_selector'>
       <!--div class='input icon-btn'>
         <img id="show-pet-store-icon" src="images/pet_store_api.png" title="Show Swagger Petstore Example Apis">
